# essentialMix-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/ai/: Cargo.toml  README.md
crates/ai/src/: lib.rs
crates/ai/src/audio/: mod.rs  openai.rs  whisper.rs
crates/ai/src/imaging/: image.rs
crates/ai/src/language/: llama.rs  mod.rs  openai.rs
crates/ai/src/vision/: mod.rs
crates/ai/tests/: audio.rs  audio_openai.rs  audio_whisper.rs  imaging.rs  imaging_wuerstchen.rs  language.rs  language_llama.rs  language_openai.rs  source_size.rs
crates/base/: Cargo.toml  README.md
crates/base/src/: app.rs  bytes.rs  date.rs  env.rs  lib.rs  string.rs
crates/base/src/datetime/: mod.rs
crates/base/src/io/: directory.rs  file.rs  mod.rs  path.rs  terminal.rs
crates/base/src/random/: address.rs  automotive.rs  barcode.rs  business.rs  color.rs  datetime.rs  filesystem.rs  internet.rs  lorem.rs  mod.rs  person.rs
crates/base/tests/: app.rs  bytes.rs  date.rs  datetime.rs  env.rs  io.rs  random.rs  string.rs
crates/collections/: Cargo.toml  README.md
crates/collections/src/: bit_helper.rs  lib.rs  range.rs
crates/collections/src/range/: lambda_range.rs  mod.rs  range.rs
crates/collections/tests/: bit_helper.rs  lambda_range.rs  range.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  errors.rs  lib.rs
crates/core/tests/: errors.rs  system.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: error.rs  lib.rs  service.rs  settings.rs  traits.rs
crates/crypto/src/asymmetric/: mod.rs  rsa.rs  settings.rs  traits.rs
crates/crypto/src/cipher/: mod.rs  vigenere.rs
crates/crypto/src/encoder/: base64.rs  mod.rs  numeric.rs  traits.rs
crates/crypto/src/hash/: hmac.rs  md5.rs  mod.rs  sha.rs  traits.rs
crates/crypto/src/random/: mod.rs  rng.rs  traits.rs
crates/crypto/src/symmetric/: aes.rs  mod.rs  settings.rs  traits.rs
crates/db/: Cargo.toml
crates/db/common/: Cargo.toml  README.md
crates/db/common/src/: dto.rs  lib.rs  models.rs
crates/db/common/tests/: dto_tests.rs  models_tests.rs  repositories_tests.rs  schema_tests.rs
crates/db/diesel/: Cargo.toml  README.md
crates/db/diesel/examples/: QUICKSTART.md  README.md  main.rs
crates/db/diesel/examples/migrations/mysql/: down.sql  up.sql
crates/db/diesel/examples/migrations/postgres/: down.sql  up.sql
crates/db/diesel/examples/migrations/sqlite/: down.sql  up.sql
crates/db/diesel/examples/models/: image.rs  image_tag.rs  mod.rs  tables.rs  tag.rs
crates/db/diesel/examples/repositories/: image_repository.rs  mod.rs  tag_repository.rs
crates/db/diesel/examples/schema/: image.rs  image_tag.rs  mod.rs  tables.rs  tag.rs
crates/db/diesel/src/: lib.rs  models.rs  repositories.rs  schema.rs
crates/db/diesel/tests/: repositories_tests.rs
crates/db/examples/: README.md
crates/db/examples/schema/: image.rs  image_tag.rs  tag.rs
crates/db/seaorm/: Cargo.toml  README.md
crates/db/seaorm/examples/: QUICKSTART.md  README.md  main.rs
crates/db/seaorm/examples/migrations/mysql/: down.sql  up.sql
crates/db/seaorm/examples/migrations/postgres/: down.sql  up.sql
crates/db/seaorm/examples/migrations/sqlite/: down.sql  up.sql
crates/db/seaorm/examples/models/: image.rs  image_tag.rs  mod.rs  tag.rs
crates/db/seaorm/examples/repositories/: image_repository.rs  mod.rs  tag_repository.rs
crates/db/seaorm/src/: dto.rs  lib.rs  repositories.rs  schema.rs
crates/db/seaorm/tests/: db_tests.rs  repositories_tests.rs
crates/db/src/: lib.rs  repositories.rs  schema.rs
crates/db/tests/: db_tests.rs
crates/log/: Cargo.toml  README.md
crates/log/src/: error.rs  lib.rs  log4rs.rs  log4rsx.rs  multilogger.rs  slog.rs  slogx.rs
crates/log/tests/: log4rs.yaml  log4rsx_fom_code_test.rs  log4rsx_from_file_test.rs  log4rsx_test.rs  log_level.rs  multilogger_test.rs  slogx_test.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: error.rs  lib.rs
crates/net/src/vpn/: expressvpn.rs
crates/net/src/web/: mod.rs  reqwest.rs  reqwestx.rs
crates/net/src/web/mail/: mailer.rs  mod.rs  tempmail.rs
crates/net/tests/: mail.rs  vpn.rs  web.rs
crates/threading/: Cargo.toml  README.md
crates/threading/src/: cond.rs  constants.rs  consumer.rs  lib.rs  spinner.rs
crates/threading/src/consumer/: _impl_consumer.rs  _impl_injector_consumer.rs  _impl_producer_consumer.rs  mod.rs
crates/threading/tests/: cond.rs  consumer.rs  lib.rs  signal.rs  spinner.rs
essentialMix-rs/: Cargo.toml
essentialMix-rs/src/: lib.rs  string.rs
essentialMix-rs/src/audio/: rwhisper.rs
essentialMix-rs/src/io/: file.rs  key_listener.rs  mod.rs  path.rs
essentialMix-rs/src/log/: log4rs.rs  mod.rs  slog.rs
essentialMix-rs/src/random/: datetime.rs  mod.rs
essentialMix-rs/src/threading/: cond.rs  injector_consumer.rs  producer_consumer.rs  spinner.rs
essentialMix-rs/src/web/: mod.rs
src/: main.rs
src/tests/: app.rs  audio.rs  io.rs  language.rs  log.rs  mail.rs  random.rs  threading.rs  vision.rs  vpn.rs  web.rs
tests/: app_tests.rs  integration_test.rs  log_tests.rs  manual_tests.rs  random_tests.rs  threading_tests.rs  web_tests.rs
