[package]
name = "testapp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
dotenvy = "0"
humantime = "2"
image = "0.24.9"
kalosm = { version = "0", features = ["bert", "llama", "anthropic", "openai", "remote"], optional = true }
kalosm-language = { version = "0", features = ["bert", "llama", "anthropic", "openai", "remote"], optional = true }
lazy_static = "1"
log = "0"
rand = "0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0"

emix = { workspace = true, features = ["full"] }
emixai = { workspace = true, features = ["full"] }
emixlog = { workspace = true, features = ["full"] }
emixnet = { workspace = true, features = ["full"] }
emixthreading = { workspace = true }

[workspace]
members = [
	"crates/ai",
	"crates/base",
	"crates/core",
	"crates/log",
	"crates/net",
	"crates/threading",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2do@gmail.com>"]

[workspace.dependencies]
emixai = { path = "crates/ai" }
emix = { path = "crates/base" }
emixcore = { path = "crates/core" }
emixlog = { path = "crates/log" }
emixnet = { path = "crates/net" }
emixthreading = { path = "crates/threading" }
parking_lot = "0"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

