[package]
name = "testapp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
emixcore = { workspace = true }

[workspace]
members = [
	"crates/ai",
	"crates/base",
	"crates/core",
	"crates/log",
	"crates/net",
	"crates/threading",
	"crates/db/common",
	"crates/db/seaorm",
	"crates/db/diesel",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2do@gmail.com>"]

[workspace.dependencies]
emixai = { path = "crates/ai" }
emix = { path = "crates/base" }
emixcore = { path = "crates/core" }
emixlog = { path = "crates/log" }
emixnet = { path = "crates/net" }
emixthreading = { path = "crates/threading" }
emixdb = { path = "crates/db/common" }
emixseaorm = { path = "crates/db/seaorm" }
emixdiesel = { path = "crates/db/diesel" }
parking_lot = "0"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

