[package]
name = "testapp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
emixcore = { workspace = true }

[workspace]
members = [
	".",
	"crates/ai",
	"crates/base",
	"crates/core",
	"crates/db/common",
	"crates/db/diesel",
	"crates/db/seaorm",
	"crates/log",
	"crates/net",
	"crates/threading",
	"crates/collections",
	"crates/crypto",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2025@outlook.com>"]

[workspace.dependencies]
emixai = { path = "crates/ai" }
emix = { path = "crates/base" }
emixcore = { path = "crates/core" }
emixdb = { path = "crates/db/common" }
emixdiesel = { path = "crates/db/diesel" }
emixseaorm = { path = "crates/db/seaorm" }
emixlog = { path = "crates/log" }
emixnet = { path = "crates/net" }
emixthreading = { path = "crates/threading" }
emixcollections = { path = "crates/collections" }
emixcrypto = { path = "crates/crypto" }
parking_lot = "0"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

