# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "emixai"
description = "Feature-gated AI helpers (audio, imaging, language, vision) for EssentialMix."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
emix = { workspace = true}
async-openai = { version = "0", features = ["chat-completion"], optional = true }
backoff = "0"
futures = "0"
image = { version = "0.24.9", optional = true } # compatibility with Kalosm
kalosm = { version = "0", features = ["bert", "llama", "anthropic", "openai", "remote"], optional = true }
kalosm-language = { version = "0", features = ["bert", "llama", "anthropic", "openai", "remote"], optional = true }
reqwest = { version = "0", features = ["blocking", "cookies", "http2", "json", "gzip", "deflate", "brotli", "zstd", "multipart", "socks", "stream"] }
rodio = { version = "0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["language"]
full = ["language", "audio", "imaging", "vision"]
full-cuda = ["language", "audio", "imaging", "vision", "cuda"]
language = ["kalosm/language", "dep:async-openai", "dep:kalosm", "kalosm-language"]
audio = ["kalosm/sound", "dep:async-openai", "dep:kalosm", "dep:rodio"]
imaging = ["kalosm/vision", "dep:kalosm", "dep:image"]
vision = ["kalosm/vision", "dep:kalosm", "dep:image"]
cuda = ["kalosm?/cuda", "kalosm-language?/cublas"]
metal = ["kalosm?/metal", "kalosm-language?/metal"]
mkl = ["kalosm?/mkl", "kalosm-language?/mkl"]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
