# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "emixcollections"
description = "Collection utilities including generic range types with iteration, clamping, and overlap detection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
