# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "emixcore"
description = "Shared error handling, debug configuration, and foundational traits for EssentialMix."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num_cpus = "1"
thiserror = "2"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
