# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "emixcrypto"
description = "Cryptographic utilities for EssentialMix, providing encryption, hashing, encoding, and random number generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
emixcore = { workspace = true }
# Cryptography
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
ctr = { version = "0.9", optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
md5 = { version = "0.7", optional = true }
hmac = { version = "0.12", optional = true }
adler = { version = "1.0", optional = true }
# Encoding
base64 = "0.22"
# Random
rand = "0.8"
rand_chacha = "0.3"
# Utilities
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = "1.0"
pbkdf2 = { version = "0.12", optional = true }
hex = "0.4"

[features]
default = ["aes", "cbc", "rsa", "sha2", "pbkdf2"]
full = ["default", "md5", "sha1", "hmac", "adler"]
legacy = ["md5", "sha1"]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
