[package]
name = "emixdb"
description = "DTOs, pagination, and merge traits shared across EssentialMix database crates."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[package.metadata.scripts]
check = "cargo check"
build = "cargo build"
release = "cargo build --release"

