# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "emixseaorm"
description = "emix-sea-orm is a Rust library that has some basic utility functions and components."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
emixcore = { workspace = true }
emixdb = { workspace = true }
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "1", features = ["macros", "with-chrono"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls", "sea-orm/with-chrono"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm/runtime-tokio-rustls", "sea-orm/with-chrono"]
mysql = ["sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls", "sea-orm/with-chrono"]
mariadb = ["mysql"]
full = ["sqlite", "postgres", "mysql"]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
